--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,25 @@ overflow-x: hidden;
 margin: 0;
 padding: 0;
 width: 100%;
+ scroll-behavior: smooth;
+   font-size: 1.5em;
+   font-weight: bold;
+   font-family: 'Trebuchet MS', sans-serif;
 }
-.navbar{
+
+:root {
+  --main-team-color: #ffc300;
+}
+
+
+
+#navbar{
+  display: block
   overflow: hidden;
   position: fixed;
   width: 100%;
-  z-index:2;
   top: 0%;
+  z-index: 2;
 }
 
 ul {
@@ -18,6 +30,10 @@ ul {
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0);
   list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+
 }
 .underwatchLogo{
   width: 100px;
@@ -45,15 +61,8 @@ li a {
 }
 
 li a:hover {
-  background-color: #D4AF37;
+  background-color: var(--main-team-color);
 }
-
-li {
-display: inline;
-  float: left;
-  margin-right: 40px;
-}
-
 
 header {
   font-family: Arial;
@@ -71,13 +80,10 @@ header {
 
 .heading {
   position: absolute;
-  color: #D4AF37;
   padding: 2px;
-  font-size: 1.5em;
-  font-weight: bold;
   text-align: center;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   align-items: center;
   flex-direction:column;
@@ -85,7 +91,8 @@ header {
 }
 
 .slogan{
-background-color:black;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,195,0,1) 50%, rgba(0,0,0,1) 55%);    color: white;
     width: 100%;
 }
 
@@ -96,7 +103,6 @@ video {
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: -1;
   object-position: center;
   object-fit: cover;
 }
@@ -104,7 +110,6 @@ video {
 .overlay {
     background: black;
     opacity: 0.2;
-    z-index: 1;
     margin: 0%;
   }
 
@@ -117,7 +122,6 @@ video {
     border-width: 0px 15px 15px 0px;
     transform: rotate(45deg);
     transition: border-width 150ms ease-in-out;
-    z-index: 1;
   }
 
   .arrow:hover {
@@ -125,3 +129,22 @@ video {
     border-right-width: 7px;
   }
 
+#about {
+    text-align: center;
+        background-color: black;
+        color: white;
+}
+
+.about {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.about p{
+    width: 70%;
+
+}
