--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 html, body {
-overflow-x: hidden;
 margin: 0;
 padding: 0;
 width: 100%;
@@ -16,12 +15,13 @@ width: 100%;
 
 
 #navbar{
-  display: block
+  display: block;
   overflow: hidden;
   position: fixed;
   width: 100%;
   top: 0%;
   z-index: 2;
+  background: black;
 }
 
 ul {
@@ -79,22 +79,32 @@ header {
 }
 
 .heading {
-  position: absolute;
   padding: 2px;
   text-align: center;
   width: 100%;
-  z-index: 3;
-  display: flex;
-  align-items: center;
-  flex-direction:column;
-  justify-content: center;
+  display: grid;
+  justify-items: center;
 }
 
 .slogan{
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,195,0,1) 50%, rgba(0,0,0,1) 55%);    color: white;
     width: 100%;
+    grid-area: 2 / 1 / 2 / 1;
+    justify-items: center;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
 }
+
+.overlay {
+    background: black;
+    opacity: 0.2;
+    margin: 0%;
+    grid-area: 1 / 1 / 4 / 2;
+  }
 
 
 video {
@@ -106,12 +116,6 @@ video {
   object-position: center;
   object-fit: cover;
 }
-
-.overlay {
-    background: black;
-    opacity: 0.2;
-    margin: 0%;
-  }
 
   .arrow {
     box-sizing: border-box;
@@ -146,5 +150,47 @@ video {
 
 .about p{
     width: 70%;
+}
+
+#events{
+      display: grid;
+      justify-items: center;
+    height: 100vh;
+  }
+
+
+
+
+  .blur {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      background-image: url("overwatch-events.jpg");
+      filter: blur(4px);
+      -webkit-filter: blur(4px);
+      /* Add the blur effect */
+      filter: blur(4px);
+      -webkit-filter: blur(4px);
+     grid-area: 1 / 1 / 4 / 2;
+         width: 100%;
+         height: 100%
+
+
+  }
+
+
+.events{
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  text-align: center;
+  grid-area: 1 / 1 / 2 / 2;
+    width: 70%;
+      justify-items: center;
+      z-index: 1;
 
 }
+
+
