--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ margin: 0;
 padding: 0;
 width: 100%;
  scroll-behavior: smooth;
-   font-size: 1.5em;
+   font-size: 1.2em;
    font-weight: bold;
    font-family: 'Trebuchet MS', sans-serif;
 }
@@ -15,16 +15,44 @@ width: 100%;
 
 
 #navbar{
-  display: block;
-  overflow: hidden;
   position: fixed;
-  width: 100%;
   top: 0%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   z-index: 2;
   background: black;
+  width: 100%
 }
 
-ul {
+.hamburger-menu {
+  margin: 2rem;
+  width: 2.5rem;
+  cursor: pointer;
+}
+.bar-top,
+.bar-middle,
+.bar-bottom {
+  height: 5px;
+  background: white;
+  border-radius: 5px;
+  margin: 16px 0;
+  transform-origin: left;
+  transition: all 0.5s;
+}
+.hamburger-menu:hover .bar-top {
+  transform: rotate(45deg);
+}
+.hamburger-menu:hover .bar-middle {
+  transform:translateX(1rem);
+  opacity: 0;
+}
+.hamburger-menu:hover .bar-bottom {
+  transform: rotate(-45deg);
+}
+
+
+.nav-list {
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -33,26 +61,16 @@ ul {
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
-
 }
+
+
 .underwatchLogo{
-  width: 100px;
-  height: 100px;
-  margin: 0%;
-  padding: 0%;
-}
-
-.underwatchLogo img {
-  max-width: 25%;
-  max-height: 25%;
-  margin: 0%;
-  padding: 0%;
+  height: 100px
 }
 
 
 
 li a {
-  display: block;
   color: #FFFFFF;
   text-align: center;
   padding: 14px 16px;
@@ -87,9 +105,7 @@ header {
 }
 
 .slogan{
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,195,0,1) 50%, rgba(0,0,0,1) 55%);    color: white;
-    width: 100%;
+    color: white;
     grid-area: 2 / 1 / 2 / 1;
     justify-items: center;
     z-index: 1;
@@ -104,13 +120,11 @@ header {
     opacity: 0.2;
     margin: 0%;
     grid-area: 1 / 1 / 4 / 2;
+    width: 100%;
   }
 
 
 video {
-  position: static;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100vh;
   object-position: center;
@@ -119,8 +133,8 @@ video {
 
   .arrow {
     box-sizing: border-box;
-    height: 5vw;
-    width: 5vw;
+    height: 10vw;
+    width: 10vw;
     border-style: solid;
     border-color: white;
     border-width: 0px 15px 15px 0px;
@@ -135,8 +149,9 @@ video {
 
 #about {
     text-align: center;
-        background-color: black;
-        color: white;
+    background-color: black;
+    color: white;
+    padding-bottom: 100px;
 }
 
 .about {
@@ -150,6 +165,25 @@ video {
 
 .about p{
     width: 70%;
+}
+
+.about img{
+  width: 80%
+}
+
+.blue-button {
+  display: inline-block;
+  font-family: Whitney, "Open Sans", Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 11pt;
+  border-radius: 3px;
+  cursor: pointer;
+  height: 45px;
+  width: 250px;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+  background-color: #7289da;
+  border: 2px solid #7289da;
+  color: #fff;
 }
 
 #events{
@@ -187,7 +221,7 @@ video {
   border: 3px solid #f1f1f1;
   text-align: center;
   grid-area: 1 / 1 / 2 / 2;
-    width: 70%;
+    width: 80%;
       justify-items: center;
       z-index: 1;
 
